--- a/styles/colors.css
+++ b/styles/colors.css
@@ -13,7 +13,8 @@ h1, h2, h3, h4{color:#888;}
 .orange{background-color:#FF6A13;}
 .green{background-color:#00CC66;}
 .yellow{background-color:#F6BB33;}
-
+.blue{background-color:#57a1ff;}
+.fuschia{background-color:#ff4566;}
 
 header{
     background-color: #3ca3da;
