--- a/styles/common.css
+++ b/styles/common.css
@@ -104,8 +104,7 @@ p{
 .corner-5{border-radius: 5px;}
 
 nav li.selected{
-    z-index: 1;
-    position: relative;
+    /* z-index: 1; */
     font-weight: bold;
     text-shadow: 1px -2px #3572a0;    
 }
@@ -173,6 +172,70 @@ nav li.selected{
 .degree-4{opacity:0.4;}
 .degree-5{opacity:0.2;}
 
+.fadeIn { 
+	/* CSS needed for animation
+	---------------------------------------------------- */
+	opacity:0;
+	-webkit-animation:fadeIn ease-in 1;
+	-moz-animation:fadeIn ease-in 1;
+	-o-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+	-webkit-animation-fill-mode:forwards;
+	-moz-animation-fill-mode:forwards;
+	-o-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+}
+ 
+/* Animation Times - Time for image to fade in
+---------------------------------------------------- */
+.fadeIn-1s {
+	-webkit-animation-duration:1s;
+	-moz-animation-duration:1s;
+	-o-animation-duration:1s;
+	animation-duration:1s;
+}
+
+.fadeIn-2s {
+	-webkit-animation-duration:2s;
+	-moz-animation-duration:2s;
+	-o-animation-duration:2s;
+	animation-duration:2s;
+}
+ 
+.fadeIn-3s {
+	-webkit-animation-duration:3s;
+	-moz-animation-duration:3s;
+	-o-animation-duration:3s;
+	animation-duration:3s;
+}
+ 
+/* Animation Delay - Time for image to be delayed
+---------------------------------------------------- */
+.fadeIn-Delay-1s {
+	-webkit-animation-delay:1s;
+	-moz-animation-delay:1s;
+	-o-animation-delay:1s;
+	animation-delay:1s;
+}
+ 
+.fadeIn-Delay-5s {
+	-webkit-animation-delay:5s;
+	-moz-animation-delay:5s;
+	-o-animation-delay:5s;
+	animation-delay:5s;
+}
+
+/* Key Frames
+---------------------------------------------------- */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes    fadeIn { from { opacity:0; } to { opacity:1; } }
+@-o-keyframes      fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes         fadeIn { from { opacity:0; } to { opacity:1; } }
+
+
+
+
+
 /* ~~~~~~~~~ graphs ~~~~~~~~~ */
 
 .axis path,
@@ -180,7 +243,6 @@ nav li.selected{
     fill: none;
     stroke: #aaa;
     stroke-width:1px;
-    shape-rendering: crispEdges;
 }
 text{
 	fill:#aaa;
@@ -189,6 +251,7 @@ text{
 }
 
 .x.axis path{}
+.y.axis path{}
 
 .line {
   fill: none;
@@ -203,3 +266,93 @@ text{
 }
 
 
+
+.bubble-chart{
+    width:760px;
+}
+
+.bubble-chart h3 {
+    color: #aaa;
+}
+
+.bubble-chart .top {
+    text-align: left;
+    line-height: 18pt;
+}
+
+.bubble-chart .top a {
+    color: #aaa;
+}
+
+.bubble-chart .top a:visited {
+    color: #aaa;
+}
+
+.bubble-chart h3 > small {
+    margin: 0 0 0 26px;
+    font-size: 10pt;
+    font-weight: 400;
+}
+
+.popover {
+    z-index: 9000;
+}
+
+.tooltip {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    border: 1px solid #e0e0e0;
+    background-color: #fefefe;
+    opacity: 0.95;
+    color: #777;
+    padding: 2px 10px 10px 10px;
+    width: 100px;
+    font-size: 7pt;
+    z-index: 10;
+    border-radius: 5px;
+    box-shadow: 3px 3px 4px rgba(0,0,0,0.20);
+}
+
+.tooltip .title a {
+    font-size: 8pt;
+    font-weight: bold;
+    color: #777;
+    line-height:2;
+}
+
+.bubble-chart svg {
+      min-width: 500px;
+      min-height: 400px;
+}
+.summary{
+    margin-top:30px;
+}
+.summary table{
+    margin:0px 20px 20px 20px;
+    width:720px;
+    /* font-size: small; */
+}
+.summary table td{
+    padding:5px;
+}
+.summary table .narrow{
+    width:80px;
+}
+
+.summary th{
+    font-size: large;
+    text-align: left;
+}
+
+.summary .circle.red{
+    border:1px solid #b3361a;
+}
+.summary .circle.green{
+    border:1px solid #03a956;
+}
+
+.button-back, .button-fwd{
+    font-size:xx-large;
+    position:absolute;
+}
