--- a/styles/outlook.css
+++ b/styles/outlook.css
@@ -11,8 +11,14 @@ h3 {
 }
 #snapshot article{
     width:300px;
-    min-height: 150px;
-    vertical-align: top;
+    /* min-height: 150px; */
+    height:60px;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    position: relative;
+    font-style: italic;
+    display:none;
 }
 
 #snapshot{}
@@ -20,6 +26,7 @@ h3 {
 #download{
     margin-left:15px;
     margin-top:15px;
+    margin-bottom:30px;
 }
 #download i{
     font-size:40px;
@@ -59,7 +66,7 @@ h3 {
 }
 
 #traffic-lights table{
-    width:450px;
+    /* width:450px; */
     height:150px;
     position:relative;
     margin:20px 0px 20px -20px;
@@ -99,89 +106,16 @@ h3 {
     top:38%;    
 }
 
-
-
-#bubble{
-    width:760px;
-}
-
-#bubble h3 {
-    color: #aaa;
-}
-
-#bubble .top {
-    text-align: left;
-    line-height: 18pt;
-}
-
-#bubble .top a {
-    color: #aaa;
-}
-
-#bubble .top a:visited {
-    color: #aaa;
-}
-
-#bubble h3 > small {
-    margin: 0 0 0 26px;
-    font-size: 10pt;
-    font-weight: 400;
-}
-.popover {
-    z-index: 9000;
-}
-
-.tooltip {
-    position: absolute;
-    top: 100px;
-    left: 100px;
-    border: 1px solid #e0e0e0;
-    background-color: #fefefe;
-    opacity: 0.95;
-    color: #777;
-    padding: 2px 10px 10px 10px;
-    width: 100px;
-    font-size: 7pt;
-    z-index: 10;
-    border-radius: 5px;
-    box-shadow: 3px 3px 4px rgba(0,0,0,0.20);
-}
-
-.tooltip .title a {
-    font-size: 8pt;
-    font-weight: bold;
-    color: #777;
-    line-height:2;
-}
-
-
-#bubble svg {
-      min-width: 500px;
-      min-height: 400px;
-}
-#summary{
-    margin-top:30px;
-}
-#summary table{
-    margin:0px 20px 20px 20px;
-    width:720px;
-}
-#summary table td{
-    padding:5px;
-}
-#summary table .narrow{
-    width:80px;
-}
-
 #summary th{
     font-size: large;
     text-align: left;
     width:50%;
 }
 
-#summary .circle.red{
-    border:1px solid #b3361a;
+
+.pointer-box-left .pointer{
+    background-color: #f0f0f0;
 }
-#summary .circle.green{
-    border:1px solid #03a956;
+.pointer-box-left{
+    margin-top:2px;
 }
