--- a/styles/intervention.css
+++ b/styles/intervention.css
@@ -2,14 +2,19 @@
     padding-top:30px;
     padding-bottom: 50px;
 }
-#intervention-builder #filters{
+
+#intervention-builder-1 #filters,
+#intervention-builder-2 #filters{
     margin-left:20px;
+    display: inline-block;
 }
-#intervention-builder .nav{
+#intervention-builder-1 .nav,
+#intervention-builder-2 .nav{
     margin-left:10px;
     margin-top:10px;
 }
-#intervention-builder table{
+#intervention-builder-1 table,
+#intervention-builder-2 table{
     width:720px;
     margin:10px 20px;
     margin-top:0px;
@@ -17,15 +22,24 @@
     position:relative;
     padding: 0px;
 }
-/*
-#intervention-builder div{
-    display:table-cell;
-    margin:20px 10px;
-}
-*/
-#intervention-builder td label{
+#intervention-builder-1 td label{
     font-size: small;
     color: #bbb;
+}
+
+#reset{
+    display:inline-block;
+    width:250px;
+    margin-left:30px;
+    right:0px;
+    position:relative;
+}
+#reset label{
+    position: absolute;
+    font-size: x-small;
+}
+#reset .icon-refresh{
+    color:#999;
 }
 
 #parameters{
@@ -69,19 +83,26 @@
     width:90px;
 }
 
-k-textbox > input, .k-autocomplete .k-input, .k-picker-wrap .k-input, .k-numeric-wrap .k-input, .k-dropdown-wrap .k-input, .k-selectbox .k-input {
+.k-textbox > input, 
+.k-autocomplete .k-input, 
+.k-picker-wrap .k-input, 
+.k-numeric-wrap .k-input, 
+.k-dropdown-wrap .k-input, 
+.k-selectbox .k-input {
     border: 0 none;
     height: 1.5em;
 }
 
 
-#result-box{
+#result-box-1,
+#result-box-2{
     width:120px;
     min-height:120px;
 }
-#result.circle{
+#result-1.circle,
+#result-2.circle{
     background-color: #3ca3da;
-    border:2px solid #2688bc;
+    border:1px solid #2688bc;
     font-weight:bold;
     color:#fff;
     font-size: xx-large;
@@ -89,6 +110,16 @@ k-textbox > input, .k-autocomplete .k-input, .k-picker-wrap .k-input, .k-numeric
     text-align: center;
     margin:auto;
     padding:0;
+    background: #00b7ea;
+    background: -moz-radial-gradient(center, ellipse cover,  #00b7ea 0%, #009ec3 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#00b7ea), color-stop(100%,#009ec3));
+    background: -webkit-radial-gradient(center, ellipse cover,  #00b7ea 0%,#009ec3 100%);
+    background: -o-radial-gradient(center, ellipse cover,  #00b7ea 0%,#009ec3 100%);
+    background: -ms-radial-gradient(center, ellipse cover,  #00b7ea 0%,#009ec3 100%);
+    background: radial-gradient(ellipse at center,  #00b7ea 0%,#009ec3 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', endColorstr='#009ec3',GradientType=1 );
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+
 }
 .operators{
     font-size: xx-large;
@@ -98,7 +129,10 @@ k-textbox > input, .k-autocomplete .k-input, .k-picker-wrap .k-input, .k-numeric
     position:relative;
     padding:0px 0px;
     font-weight:bold;
-    padding-top:25px;
+    
+}
+#intervention-builder-1 .operators{
+    padding-top:20px;
 }
 #lift-box{
     display:table;
@@ -110,6 +144,7 @@ k-textbox > input, .k-autocomplete .k-input, .k-picker-wrap .k-input, .k-numeric
     display:table-cell;
     vertical-align: middle;
     text-align: center;
+    text-shadow: 1px 2px #3fb4f3, 0px -2px #2688bc;
 }
 #lift-label{
     color: #3ca3da;
@@ -118,4 +153,29 @@ k-textbox > input, .k-autocomplete .k-input, .k-picker-wrap .k-input, .k-numeric
     text-align:center;
     padding-top:10px;
     width:120px;
+}
+
+#intervention-builder-2{
+    min-height:200px;
+}
+#intervention-builder-2 th{
+    padding-left:20px;
+    padding-bottom:10px;
+    padding-top:10px;
+    font-size: medium;
+    color:#3ca3da;
+}
+
+#intervention-builder-2 fieldset{
+   width:160px;
+   padding-left: 20px;
+}
+#intervention-builder-2 .operators{
+    width:180px;
+    text-align: left;
+    position: relative;
+}
+
+#message-content{
+    margin-top:20px;
 }
